--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ test me please: <p id="demo"></p>
     
 <script>
 class Structi {
-  constructor() {    
-    this.i=1;
+  constructor(i=0) {    
+    this.i=i;
     this.s="";
   }
   doit() {
