--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@ class Structi {
     //}
   }
 };       
-var tst1 = new Structi();
-let i;    
-for (i=0; i<10; i++) { 
+var tst1 = new Structi(); 
+for (let i=0; i<10; i++) { 
   tst1.doit(i);
 }
     
